Fix a crash in help index filter

The crash appeared when Creator was built against Qt 6.2,
however, the Creator code for IndexFilterModel was
broken before and was working just by coincidence with Qt 5.15.

1. mapToSource() reimplementation creates now indices on source
   model side, instead of on proxy side.
2. filter() returns invalid model index now in case when
   list is unfiltered and empty and in case when the filter
   was used but we got empty result. Before it was creating
   a new valid index to (0, 0), but in fact we didn't have a
   corresponding valid data for it.
3. Reimplement headerData(), as otherwise the default implementation
   of this function inside proxy was calling erroneously index(0, 0)
   when we had empty data.
4. Reimplement hasChildren(), as otherwise the default implementation
   returned true for hidden root item, what caused a call to
   index(0, 0) in case we had empty data.
5. Assert that the index() is being called only for a valid
   range of rows that match our internal proxy data.
6. Add some checks whether sourceModel() isn't nullptr prior to use.
7. Simplify IndexWindow::filterIndices().

Fixes: QTCREATORBUG-26309
Change-Id: I5d150488893abd117b7d68c0436e4e511537738b
Reviewed-by: Eike Ziller <eike.ziller@qt.io>